@@ -290,10 +290,17 @@ SKIP: {
 
 SKIP: {
   skip("new 2.8 stuff", 0)
-    unless Gtk2->CHECK_VERSION (2, 8, 0);
+    unless Gtk2 -> CHECK_VERSION(2, 8, 0);
 
   $window_three -> set_urgency_hint(TRUE);
   $window_three -> move_region($region, 10, 10);
+}
+
+SKIP: {
+  skip "new 2.12 stuff", 0
+    unless Gtk2 -> CHECK_VERSION(2, 11, 0); # FIXME: 2.12
+
+  $window -> beep();
 }
 
 $window -> hide();
